[metadata]
name = labkit
version = 1.0
summary = labkit
description-file = README.md
author = lhr
author-email = airhenry@gmail.com


classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    labkit

[entry_points]
console_scripts =
    ls_worker = labkit.ls_worker:main
    ls_front = labkit.ls_front:main
    ls_end = labkit.ls_end:main



[pbr]
warnerrors = true

